# Roshni_Backend

./: .env  README.md  config.py  logging_config.py  main.py  pyproject.toml  roshni.db  run_backend.sh  seed_demo.py
app/: init,py  models.py  schemas.py
app/routes/: admin.py  billing.py  dashboard.py  demand.py  iot.py  wallet.py
app/services/: ai_pricing.py  blockchain_service.py  discom_service,py  init.py  iot_service.py  matching_engine.py  pool_engine.py
app/utils/: constants,.py  validators.py
backend/: .env.example  check_admin_wallet.py  fund_wallet.py  main.py  pyproject.toml  requirements.txt
backend/app/: database.py  schemas.py
backend/app/routes/: admin.py  blockchain.py  iot.py  voice.py
backend/app/services/: billing_service.py  pool_engine.py  pool_sun_service.py  voice_service.py  wallet_service.py
backend/app/utils/: hash_utils.py  pricing_models.py
